crates/tui/tests/storybook/snapshots/app_tool__present_plan_tool_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* present_plan Parser refactor                                             14:37:03

* present_plan Parser refactor                                             14:37:03
    1   # Goal
    2   Refactor parser state.
    3
    4   ```rust
    5   fn parse(input: &str) -> Ast {
    6       todo!()
    7   }
    8   ```
    9
   10   # Verification
   11   Run parser tests.




─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
