crates/tui/tests/storybook/snapshots/app_tool__spawn_agent_tool_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* spawn_agent Review parser                                          14:37:03

* spawn_agent Review tests                                           14:37:03
  cedar-1  running  1.2s  $0.0123
  Review tests
  Running grep

* spawn_agent                                                        14:37:03
  subagent queue is full







─ ✿ working… ─────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────
 ○ normal                                                             1:1 100%
