crates/tui/tests/storybook/snapshots/app_tool__spawn_agent_tool_states.expanded.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 78 20
  0   0   1 fg=AnsiValue(8)
  0   1  12 attrs=dim
  0  67  10 attrs=dim
  2   0   1 fg=AnsiValue(77)
  2   1  12 attrs=dim
  2  67  10 attrs=dim
  3   2   7 attrs=bold
  3   9  24 fg=AnsiValue(8)
  4   2  12 attrs=dim
  5   2  12 attrs=dim
  7   0   1 fg=AnsiValue(9)
  7   1  12 attrs=dim
  7  67  10 attrs=dim
  8   2  22 fg=AnsiValue(9)
 16   0   1 fg=AnsiValue(237)
 16   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 16   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 16   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 16   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 16   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 16   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 16   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 16   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 16   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 16  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 16  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 16  13  65 fg=AnsiValue(237)
 17   1   1 fg=Black bg=White
 18   0  78 fg=AnsiValue(237)
 19   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 19  10  60 bg=AnsiValue(233)
 19  70   8 fg=AnsiValue(244) bg=AnsiValue(233)
