crates/tui/tests/storybook/snapshots/app_tool__streaming_edit_file_draft_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* edit_file src/live.rs









─ ✿ working… ─────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────
 ○ normal                                                             1:1 100%
