crates/tui/tests/storybook/snapshots/app_tool__streaming_tool_draft_syntax_highlighting.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* write_file src/live.rs
   1   pub fn live(name: &str) -> String {
   2       format!("hello, {name}")

* bash cargo test -p smelt-tui app::drafts -- --nocapture





─ ✿ working… ─────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────
 ○ normal                                                             1:1 100%
